AI-JADEDEVS4/src/objects/CertificationsNEW__c.object
<CustomObject>
    <fields>
        <fullName>Certification_to_be_Renewed__c</fullName>
        <label>Certification to be Renewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Product__c</fullName>
        <label>Certified Product</label>
        <picklist>
            <picklistValues>
                <fullName>Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OfficeConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning &amp; Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Certification__c</fullName>
        <label>Certification Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementer__c</fullName>
        <label>Implementer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RelaywareId__c</fullName>
        <externalId>true</externalId>
        <label>RelaywareId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Certification</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Certifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>